2003-05-19 Tom Copeland <tom@infoether.com>

	* common/include/User.class:
	Applied patch #353: theme and User.class problems

2003-05-17 Tom Copeland <tom@infoether.com>

	* www/top/most_active.php:
	Shortened the activity percentage to two decimal places.
	
	* www/include/languages/Base.tab,www/help/tracker.php:
	Applied patch #348, thanks to Vicente Ruiz for the code.

2003-05-14 Tom Copeland <tom@infoether.com>

	* www/top/most_active.php:
	Fixed bug # 345 - "most active all time" works now.

2003-05-13  Roland Mas  <99.roland.mas@aist.enst.fr>

	* db/20030513.sql: New file.  Adding an "enabled" column to the
	themes table, defaulting to true.

	* www/themes/index.php: Filter on that column when displaying the
	list of themes.

2003-05-13 Tom Copeland <tom@infoether.com>

	* cronjobs/project_weekly_metric.php, 
	cronjobs/project_weekly_metric-backfill.php:
	Cleaning up the SQL; it was doing INSERTs into a table that wasn't
	getting created.  Thanks to Bruce Forsyth for the report.

2003-05-07  Reinhard Spisser <reinhard@spisser.it>

	* www/forum/forum.php:
	fix bug #214: Forums: next 50 and previous 50 on W2000

	* www/themes/gforge/it_login.png, www/themes/gforge/it_logout.png,
	www/themes/gforge/it_my_account.png, www/themes/gforge/it_newaccount.png
	www/include/languages/Base.tab:
	new italian icons for gforge theme, some more translations
		
2003-05-06 Tom Copeland <tom@infoether.com>

	* www/soap/SoapAPI.php:
	Added a few new methods - getNumberOfProjects, getNumberOfUsers

	* contrib/soapclients/java:
	Added an initial Java SOAP client implementation

	* common/include/GForge.class:
	A new class with some utility methods to get the number of users
	and projects hosted by a GForge server.

	* www/include/features_boxes.php:
	Refactoring some SQL into the new GForge.class.

	* www/forum/admin/index.php, common/forum/ForumFactory.class:
	Fixed bug #327: Add problems when you don't have forums
	
	* cronjobs/cvs-cron/usergroup.php: