@@ -1,0 +1,70 @@
+<?php
+/**
+ * GForge Project Management Facility
+ *
+ * Copyright 2002 GForge, LLC
+ * http://gforge.org/
+ *
+ * This file is part of GForge.
+ *
+ * GForge is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * GForge is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with GForge; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  US
+ */
+
+require_once('common/pm/ProjectGroup.class');
+require_once('common/pm/ProjectTask.class');
+require_once('common/include/Group.class');
+
+class ProjectTasksForUser {
+	var $User;
+
+	function ProjectTasksForUser(&$user) {
+		$this->User =& $user;
+		return true;
+	}
+
+	function getTasksFromSQL ($sql) {
+		$tasks = array();
+		$result=db_query($sql);
+		$rows=db_numrows($result);
+		
+		for ($i=0; $i < $rows; $i++) {
+			$group_id = db_result($result,$i,'group_id');
+			$group_project_id = db_result($result,$i,'group_project_id');
+			$project_task_id = db_result($result,$i,'project_task_id');
+			$Group =& group_get_object($group_id);
+			$ProjectGroup =& new ProjectGroup($Group,$group_project_id);
+			$task =& new ProjectTask($ProjectGroup,$project_task_id);
+			$tasks[] =& $task;
+
+		}
+		return $tasks;
+
+	}
+
+	function getTasksByGroupProjectName () {
+		$sql = "SELECT groups.group_name,project_group_list.project_name,project_group_list.group_id, ".
+			"project_task.group_project_id,project_task.priority,project_task.project_task_id,project_task.summary,project_task.percent_complete ".
+			"FROM groups,project_group_list,project_task,project_assigned_to ".
+			"WHERE project_task.project_task_id=project_assigned_to.project_task_id ".
+			"AND project_assigned_to.assigned_to_id='".$this->User->getID()."' AND project_task.status_id='1'  ".
+			"AND project_group_list.group_id=groups.group_id ".
+			"AND project_group_list.group_project_id=project_task.group_project_id AND groups.status = 'A'".
+			"ORDER BY group_name,project_name";
+
+		return $this->getTasksFromSQL($sql);
+	}
+
+}
+?>
